--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ codecov==2.0.5
 coverage==4.2
 Flask==0.11.1
 Flask-Admin==1.4.2
+Flask-Restful==0.3.6
 Flask-Cors==3.0.2
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
