--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ Flask-Restful==0.3.6
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 flower==0.9.1
+gunicorn==19.1.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+psycopg2==2.5.4
 PyJWT==1.4.2
 python-editor==1.0.1
 requests==2.11.1
